                        reserved.
$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of Open MPI since
version 1.0.

Trunk (not on release branches yet)
-----------------------------------

- ErrMgr framework redesigned to better support fault tolerance development
  activities. See the following RFC for details:
  http://www.open-mpi.org/community/lists/devel/2010/03/7589.php
- Add pkg-config(1) configuration files for ompi, ompi-c, ompi-cxx,
  ompi-f77, ompi-f90.  See the README for more details.
- Add new sensor framework to ORTE that includes modules for detecting
  stalled applications and processes that consume too much memory.
- Add new state framework to ORTE for saving and retrieving state
  information (both application and system) to/from a database.
- Add new "orte-info" tool that provides MCA params for only ORTE and
  OPAL levels - intended for use when configuring without MPI support
- Modified paffinity system to provide warning when bindings result in
  being "bound to all", which is equivalent to "not bound"

1.5
---

- Updated shared library versioning scheme and linking style of MPI
  applications.  ABI has been broken from the v1.4 series; see the
  README file for more details.
- Added "knem" support (direct process-to-process copying for shared
  memory message passing).  See http://runtime.bordeaux.inria.fr/knem/
  and the README file for more details.
- Removed the libopenmpi_malloc library (added in the v1.3 series)
  since it is no longer necessary
- Add several notifier plugins (generally used when Open MPI detects
  system/network administrator-worthy problems); each have their own
  MCA parameters to govern their usage.  See "ompi_info --param
  notifier <name>" for more details.
  - twitter (yes, that Twitter) to send a Tweet.